# RP2040_SKELETON

./: .gitignore  .gitmodules  Adding_a_Library.md  Project_Setup.md  README.md  build.sh  setup.sh
Code/: CMakeLists.txt
Code/src/: CMakeLists.txt
